--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "crypto-js": "^4.1.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.14"
   }
 }
