--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "body-parser": "^1.20.1",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "typescript": "^4.9.4"
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "typescript": "^4.9.4"
   }
 }
