--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "body-parser": "^1.20.1",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
